--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@react-pdf/renderer": "^2.0.18",
+    "@syncfusion/ej2-react-calendars": "^19.2.47",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.27.3",
     "bootstrap": "^5.0.2",
+    "file-saver": "^2.0.5",
     "firebase": "^8.8.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-datetimepicker": "^0.0.22",
+    "react-datetime-bootstrap": "^1.4.7",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-sparklines": "^1.7.0",
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
